--- a/style.css
+++ b/style.css
@@ -16,13 +16,16 @@
     margin: 0 auto;
 }
 
+/*intro*/
+
 .top-menu{
     width: 100%;
     height: 60px;
     margin:25px 0 0 179px;
     display: inline-flex;
 
-    
+    position: absolute;
+    z-index: 1;
 }
 
 .nav-link{
@@ -30,11 +33,38 @@
     display: inline-block;
     text-transform: uppercase;
     font-size: 14px;
-    font-weight: bold;
+    font-weight: 400;
     color:rgba(34, 53, 111, 1);
-    padding-right: 15px;
+    margin-right: 15px;
     padding-top: 15px;
+
+    position: relative;
     
+}
+
+.nav-link:hover{
+    font-weight: bold;
+}
+
+.nav-link:after{
+    content: "";
+    display: none;
+    width: 100%;
+    height: 1px;
+   
+    background-color: #22356F;
+    
+    margin-top: 10px;
+    position: absolute;
+    top:100%;
+    left: 0;
+    z-index: 1;
+    
+}
+
+.nav-link:hover:after{
+    
+    display: block;
 }
 
 .btm{
@@ -49,6 +79,8 @@
     border-radius: 50px;
     border: none;
     margin-left: 300px;
+
+    
     
 }
 
@@ -70,7 +102,7 @@
 .offer-content{
     width: 469px;
     height: 161px;
-    margin:180px 0 0 179px;
+    margin:187px 0 0 179px;
 }
 
 .offer{
@@ -83,11 +115,11 @@
 }
 
 .offer-text{
-    font-size: 22px;
+    font-size: 24px;
     font-weight: 400;
-    line-height: 150%;
+    line-height: 42.19px;
     color:#22356F;
-    margin-top: 30px;
+    margin-top: 80px;
 }
 
 .offer-btn{
@@ -119,14 +151,41 @@
 }
 
 .intro-photo{
-    width: 400px;
-    height:400px;
-    border-radius: 50%;
+    width: 800px;
+    height:500px;
+    border-radius: 312px;
     overflow: hidden;
+    margin-left: 800px;
+    rotate: 145deg;
+
+    display: block;
+    position: absolute;
+    top:130px;
+
+    
     
 }
 
+.intro-bg{
+    
+    width: 800px;
+    height:500px;
+    border-radius: 312px;
+    background-color:#EDFDFF;
+    rotate: 120deg;
+
+    display: block;
+    position: absolute;
+    top:0;
+    margin-left: 800px;
+
+    
+
+}
+
 .photo{
-    width: 400px;
+    width: 1100px;
     height: auto;
+    rotate:-145deg;
+
 }
