--- a/style.css
+++ b/style.css
@@ -199,12 +199,14 @@
 
 .first-page-content{
    margin-top: 0;
+   border-collapse: collapse;
 }
 
 .page1-text{
     width: 915px;
     height: 604px;
     background-color: #62D0DF;
+    vertical-align: top;
 }
 
 .first-page-text{
@@ -219,7 +221,7 @@
     font-weight: bold;
     color:#fff;
 
-    margin-top: 0;
+    margin-top: 156px;
 }
 
 .page1-description{
@@ -255,6 +257,7 @@
     height:auto;
     margin-top: 153px;
     display: flex;
+    
 
 }
 
@@ -264,7 +267,9 @@
     font-weight: 400;
     letter-spacing: 6%;
     color:#22356F;
+
     margin-left:106px;
+   
     line-height: 120%;
     
 }
@@ -297,6 +302,7 @@
 
 .help-blocks{
     margin-top: 24px;
+    border-collapse: collapse;
 }
 
 .help-block{
@@ -436,12 +442,14 @@
 
 .health-block{
     margin-top: 120px;
+    border-collapse: collapse;
 }
 
 /*daily plans*/
 
 .daily-plans{
     margin-top: 22px;
+    border-collapse: collapse;
 }
 
 .day-block{
@@ -475,6 +483,7 @@
 
 .page2{
     margin-top: 40px;
+    border-collapse: collapse;
 }
 
 .page-photo{
@@ -490,6 +499,7 @@
 .page-text{
     width: 960px;
     height: 800px;
+    vertical-align: top;
 
 }
 
@@ -536,12 +546,14 @@
 
 .page3{
     margin-top: 0;
+    border-collapse: collapse;
 }
 
 .page3-text{
     width: 960px;
     height: 800px;
     background-color: #22356F;
+    vertical-align: top;
 }
 
 .page3-content{
@@ -592,4 +604,84 @@
 .third-page-photo{
     width:auto;
     height: 800px;
+}
+
+/*info block*/
+
+.info-blocks{
+    border-collapse: collapse;
+}
+
+.info-photo{
+    width: 570px;
+    height: 380px;
+}
+
+.info-page-photo{
+    width: 570px;
+    height: auto;
+
+}
+
+.info-content{
+    width: auto;
+    height: 380px;
+    
+    vertical-align: top;
+}
+
+.info-block1{
+    display: block;
+    width: 207px;
+    height: auto;
+
+    margin-top: 98px;
+    margin-left: 68px;
+
+}
+
+.info-main{
+    font-size: 14px;
+    font-weight: bold;
+    color:#22356F;
+
+}
+
+.info-text{
+    font-size: 14px;
+    font-weight: 400;
+    color:rgba(34, 53, 111, 0.5);
+    line-height: 22.97px;
+
+    margin-top: 50px;
+    
+}
+
+.info-adress{
+    font-size: 14px;
+    font-weight: 400;
+    color:rgba(34, 53, 111, 0.5);
+    line-height: 22.97px;
+    margin-top: 25px;
+}
+
+.info-email{
+    color:  rgba(0, 109, 255, 1);
+}
+
+/*footer content*/
+
+.footer-content{
+    width: 100%;
+    height: 80px;
+    background-color: #62D0DF;
+   
+}
+
+.footer-info{
+    font-size: 14px;
+    font-weight: bold;
+    color: #fff;
+    padding-top: 32px;
+    margin-left: 190px;
 }
